# SmallGameEngine

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: ci.yml
include/: GameEngine.hpp  GameState.hpp  IntroState.hpp  MenuState.hpp  PlayState.hpp
src/: Application.cpp  Application.hpp  GameEngine.cpp  GameEngine.hpp  GameState.cpp  GameState.hpp  IntroState.cpp  IntroState.hpp  Main.cpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
